--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "mysql2": "^3.15.3",
     "zod": "^4.1.12"
   },
