--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
+    "dev": "tsx watch src/index.ts",
     "build": "rimraf dist && tsc",
-    "start": "node dist/server.js",
+    "start": "node dist/index.js",
     "lint": "eslint src/**/*.ts",
     "db:generate": "npx drizzle-kit generate --config=drizzle.config.ts",
     "db:push": "npx drizzle-kit push --config=drizzle.config.ts",
