--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/node": "^24.10.1",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "@types/uuid": "^10.0.0",
     "drizzle-kit": "^0.31.7",
     "rimraf": "^6.1.2",
     "tsx": "^4.20.6",
