--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solid-expenditure-tracker-be",
-  "version": "0.3.1",
+  "version": "1.0.0",
   "description": "Aplikasi Backend untuk Solid Expenditure Tracker",
   "keywords": [
     "nodejs",
@@ -35,6 +35,7 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@google/genai": "^1.30.0",
     "argon2": "^0.44.0",
     "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
